[package]
name = "repugnant_pickle"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
#resolver = "2"

[dependencies]
#airpiz = { path = "../airpiz" }
#anyhow = "1"
#anyhow = { path = "../anyhow" }
#nom = "7.1"
nom = { path = "../nom" }
#num-bigint = "0.4"
#num_bigint = { path = "../num_bigint" }
#once_cell ="1"
#once_cell = { path = "../once_cell" }
smol_str = { path = "../smol_str", default_features = false }
#zip = { version = "0.6", optional = true }
zip = { path = "../zip" }
